# lead-qualification-RL-env

./: .env.example  .gitignore  README.md  inference.py  requirements-train-cpu.txt  requirements-train.txt  train.py
configs/: training.yaml
docs/: LEAD_TRIAGE_OPENENV_HACKATHON_PLAN.md  PHASE0_PREREQUISITES.md  roadmap.md  task_split.md  to_do.md
lead_triage_env/: README.md  __init__.py  dynamics.py  features.py  grader.py  models.py  persona.py  pyproject.toml  rewards.py  task_tier.py
lead_triage_env/docs/: DESIGN_PHASE2.md
lead_triage_env/server/: app.py  lead_triage_environment.py  requirements.txt
lead_triage_env/training/: __init__.py  policy.py  rollout.py  trainer_grpo.py
notebooks/: train_lead_triage_grpo.ipynb  train_lead_triage_grpo.local-test.ipynb
outputs/adapters/: .gitattributes
outputs/adapters.grpo20/: .gitattributes
outputs/baselines/: baselines.json
outputs/comparison/: base.json  best_checkpoint.txt  summary.md  trained.json
outputs/inspect/: audit.json  rollouts.json
outputs/logs/: train_notebook.jsonl
scripts/: aggregate_eval.py  compare_models.py  eval_all_checkpoints.sh  eval_baselines.py  inspect_rollouts.py  plot_from_tb.py  plot_training.py  start_training.sh  summarize_comparison.py  sync_tb.sh  try_adapter.py
spacerunner/: requirements.txt  script.py
spacerunner/configs/: training.yaml
spacerunner/lead_triage_env/: .dockerignore  .hfignore  Dockerfile  (+7 more)
tests/: test_action_arguments.py  test_budget_cooldown.py  test_industry_bias.py  test_partial_obs.py  test_persona.py  test_rewards.py  test_training_rollout.py
(+16 files in other folders)
